# Hackathon-VAIC---iagod

./: .env.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.vllm.yml  docker-compose.yml  requirements.txt
apps/api/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260717_0001_initial.py  20260718_0002_add_multi_category_jsonb_specs.py  20260718_0002_catalog_bridge.py  20260718_0003_pgvector_and_fulltext.py  20260718_0003_policy_pgvector.py  20260718_0004_audit_log.py  20260718_0004_multicategory_catalog.py  20260718_0005_hybrid_catalog.py
apps/api/app/: __init__.py
apps/api/app/db/: __init__.py  seed.py
apps/api/src/: main.py  verifier.py
apps/api/tests/: conftest.py  test_audit_service.py  test_catalog_search.py  test_chat.py  test_chat_advisor.py  test_compute_information_gain.py  test_enrich_specs.py  test_eval_golden.py  test_eval_judge.py  test_eval_structural.py  test_health.py  test_humanize.py  test_hybrid_import.py  test_hybrid_postgres_integration.py  test_hybrid_schema.py  test_need_profile.py  test_normalizers.py  test_orchestrator.py  test_policy_answer.py  test_policy_pgvector_integration.py  test_policy_vector.py  test_preprocess.py  test_price_promo_stock.py  test_product_specs_json.py  test_products.py  test_router.py  test_s2_extract.py  test_s3_policy.py  test_s5_ranking.py  test_s6_generate.py  test_s7_verify.py  test_s8_respond.py  test_seed_realdata.py  test_session_store.py  test_slots.py  test_sync_catalog.py  test_typed_facet_search.py
(+248 files in other folders)
