[project]
name = "needwise-api"
version = "0.1.0"
description = "NeedWise Copilot backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "psycopg[binary]>=3.2,<4",
  "python-dotenv>=1.0,<2",
  "pydantic-settings>=2.7,<3",
  "pandas>=2.2,<3",
  "httpx>=0.28,<1",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "types-PyYAML>=6,<7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["integration: requires an external PostgreSQL instance with pgvector"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "UP046"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]
